# CodeReverse2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Module.cpp  Module.h  PEModule.cpp  PEModule.h  README.md  README.txt  appveyor.yml  cr2.cpp  cr2.hpp  dotest32.bat  dotest64.bat  dumping.cpp  dumping.h  installer.iss  internal.h  ports.h  won32.h
.github/workflows/: cmake.yml
testdata/: CMakeLists.txt  console.cpp  dll.cpp  dll.def  win.cpp
testdata/data-x64/: console.cr2.txt  console.dumpbin.txt  dll.cr2.txt  dll.dumpbin.txt  win.cr2.txt  win.dumpbin.txt
testdata/data-x86/: console.cr2.txt  console.dumpbin.txt  console.tdump.txt  dll.cr2.txt  dll.dumpbin.txt  dll.tdump.txt  win.cr2.txt  win.dumpbin.txt  win.tdump.txt
